--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "@nerux/design-system",
   "version": "0.1.0",
   "description": "Nerux Design System",
-  "type": "module",
-  "private": true,
+  "main": "dist/nerux-ds.js",
+  "module": "dist/nerux-ds.js",
+  "types": "dist/index.d.ts",
+  "files": ["dist"],
+  "private": false,
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build && echo 'User-agent: *\nDisallow: /' > storybook-static/robots.txt",
+    "deploy-storybook": "pnpm build-storybook && gh-pages -d storybook-static"
   },
   "peerDependencies": {
     "react": "^19.2.0",
@@ -42,6 +46,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "eslint-plugin-storybook": "^10.1.10",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "playwright": "^1.57.0",
     "storybook": "^10.1.10",
