--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,7 +5,14 @@
     "useDefineForClassFields": true,
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "module": "ESNext",
-    "types": ["vite/client"],
+
+    "declaration": true,
+    "declarationMap": true,
+    "emitDeclarationOnly": false,
+
+    "outDir": "dist",
+    "rootDir": "src",
+
     "skipLibCheck": true,
 
     /* Bundler mode */
